--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,20 @@
 .megrimFont{
     font-family: 'Megrim'
 }
+
+.spashContainer {
+    background-color: red;
+    /* animation-name: background;
+    animation-duration: 5s; */
+}
+
+@keyframes background {
+    from {backgroundColor: red;}
+    to {backgroundClor: yellow;}
+}
+
+.spashContainer{
+    background-color: blue;
+    -webkit-transition: background-color 4s; /* For Safari 3.1 to 6.0 */
+    transition: background-color 4s;
+}
